tests/errors/test-ghost-break-from-real-loop.c
void foo()
    //@ requires true;
    //@ ensures true;
{
    while (true)
        //@ invariant true;
    {
        //@ break; //~ should_fail
        assert(false);
    }
}
